syntax = "proto3";


message CommitToken {
  int64 field1 = 1;
  bytes field2 = 2;
}
