syntax = "proto3";


message CommitUploadResponse {

  message field1_type {

    message field1_type {
      int64 field1 = 1;
      bytes field2 = 2;
    }

    field1_type field1 = 1;
    int64 field2 = 2;

    message field3_type {
      string media_key = 1;

      message field2_type {

        message field1_type {
          string field1 = 1;
          fixed32 field2 = 2;
          string field3 = 3;
        }

        field1_type field1 = 1;

        message field2_type {
          string field1 = 1;
        }

        field2_type field2 = 2;

        message field3_type {
        }

        field3_type field3 = 3;

        message field4_type {
          fixed64 field13 = 13;
        }

        field4_type field4 = 4;

        message field5_type {
          int64 field1 = 1;
          int64 field2 = 2;
          int64 field3 = 3;
        }

        repeated field5_type field5 = 5;
        int64 field7 = 7;
        int64 field8 = 8;
        int64 field9 = 9;
        int64 field10 = 10;
        int64 field11 = 11;

        message field13_type {
          bytes field1 = 1;
          bytes field2 = 2;
        }

        field13_type field13 = 13;

        message field16_type {
          int64 field1 = 1;
        }

        field16_type field16 = 16;
        int64 field19 = 19;

        message field21_type {
          string field1 = 1;
          int64 field4 = 4;
        }

        field21_type field21 = 21;

        message field22_type {
          int64 field1 = 1;
        }

        field22_type field22 = 22;
        int64 field24 = 24;
        int64 field26 = 26;

        message field29_type {
          int64 field1 = 1;
        }

        field29_type field29 = 29;

        message field30_type {
          int64 field1 = 1;
        }

        field30_type field30 = 30;

        message field31_type {
          int64 field1 = 1;
        }

        field31_type field31 = 31;

        message field35_type {
          int64 field1 = 1;
          int64 field2 = 2;
          int64 field3 = 3;
          int64 field4 = 4;
          int64 field6 = 6;
        }

        field35_type field35 = 35;

        message field37_type {
          int64 field1 = 1;
        }

        field37_type field37 = 37;

        message field39_type {
          int64 field1 = 1;
        }

        field39_type field39 = 39;
      }

      field2_type field2 = 2;

      message field5_type {
        int64 field1 = 1;

        message field2_type {

          message field1_type {
            string field1 = 1;
            int64 field2 = 2;
            int64 field3 = 3;

            message field9_type {
              int64 field1 = 1;
              int64 field2 = 2;
              int64 field3 = 3;
            }

            field9_type field9 = 9;
          }

          field1_type field1 = 1;
        }

        field2_type field2 = 2;
      }

      field5_type field5 = 5;

      message field6_type {
        string field1 = 1;

        message field2_type {
          string field1 = 1;
          string field3 = 3;
        }

        field2_type field2 = 2;
      }

      field6_type field6 = 6;

      message field11_type {
        int64 field1 = 1;
        fixed32 field2 = 2;
      }

      field11_type field11 = 11;

      message field14_type {
        int64 field4 = 4;
      }

      field14_type field14 = 14;

      message field15_type {
        string field1 = 1;
      }

      field15_type field15 = 15;

      message field17_type {
        int64 field4 = 4;
      }

      field17_type field17 = 17;
    }

    field3_type field3 = 3;
  }

  field1_type field1 = 1;

  message field2_type {
    int64 field1 = 1;
    int64 field2 = 2;
    int64 field4 = 4;

    message field5_type {
      int64 field1 = 1;
    }

    field5_type field5 = 5;
    int64 field6 = 6;
    int64 field7 = 7;
    int64 field11 = 11;
  }

  field2_type field2 = 2;
}

